feat: SPU 添加和查看功能完成
